added help page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <link href="food.png" rel="shortcut icon">
+    <link href="pizza.png" rel="shortcut icon">
     <title>CA Bites!</title>
-    <meta name="description" content="A catalog of Yelp Eats 2024 ">
+    <meta name="description" content="A catalog of CA Yelp Eats 2024 ">
     <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="scripts.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
     <h3>COLLECTION OF YELP'S TOP IN CA 2024</h3>
     
     <div class="filters">
-        <h4>FILTER BY:</h4>
+        <h4>SORT BY:</h4>
         <button class="btn" onclick="filterByPrice();">PRICE</button>
         <button class="btn" onclick="filterByRating();">RATING</button>
         <button class="btn" onclick="filterByName();">NAME</button>
@@ -50,6 +50,7 @@
         <button class="btn" onclick="addACard();">ADD A CARD</button>
         <button class="btn" onclick="removeACard();">REMOVE A CARD</button>
         <button class="btn" onclick="removeLastCard();">REMOVE LAST CARD</button>
+        <a href="help.html"><button class="help">?</button></a>
     </div>
 
     <br><br><br><br><br><br>
