--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="main-header">
         <h1 class="title">California Bites!</h1>
     </header>
-    <h3>COLLECTION OF YELP'S TOP IN CA 2024</h3>
+    <h3>COLLECTION OF YELP'S TOP IN CALIFORNIA 2024</h3>
     
     <div class="filters">
         <h4>SORT BY:</h4>
